agregados mas roles y mas hosts

--- a/xt6infra/utiles/templates/snmpd.conf.j2
+++ b/xt6infra/utiles/templates/snmpd.conf.j2
@@ -1,5 +1,5 @@
-rocommunity xt6{{evt}}{{anio}}
+rocommunity xt6cocoliso123
 syslocation "XT6 HomeLab"
-syscontact carlos@lacnic.net
+syscontact carlos@xt6labs.io
 disk /
 
